test/compare/testdata/fixedbugs/issue514.go
// errorcheck

package main

func main() {
	v += // ERROR `syntax error: unexpected }, expecting expression`
}